--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body> 
      <header>
-        <nav>
+        <nav id="homemenu">
             <ul>
                 <li>
                     <a href="">Home</a>
